# LO-RANSAC-3DPlaneFitting

./: CMakeLists.txt  README.md
LSQ/: CMakeLists.txt  LSQ.cpp  LSQ.h  MatrixReaderWriter.cpp  MatrixReaderWriter.h
inputs/: street.xyz
outputs/: room_output.xyz  street_output.xyz
